--- a/tutors-project/src/views/Faculties/Faculties.module.css
+++ b/tutors-project/src/views/Faculties/Faculties.module.css
@@ -1,25 +1,33 @@
-.tutorsContainer {
+.facultiesContainer {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
 
-.tutors {
+.faculties {
   display: flex;
   flex-direction: row;
-  justify-content: start;
   align-items: center;
+  justify-content: flex-start;
   gap: 8px;
 }
 
-.tutors img {
+.faculties img {
   width: 24px;
   height: 24px;
 }
 
-.tutors h1 {
+.faculties h1 {
   font-size: 20px;
   font-weight: 700;
   line-height: 24px;
   letter-spacing: 1.25px;
+}
+
+.faculty {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 32px;
 }
