--- a/tutors-project/src/views/Faculties/Faculties.module.css
+++ b/tutors-project/src/views/Faculties/Faculties.module.css
@@ -27,6 +27,7 @@
 .faculty {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: flex-start;
   gap: 32px;
