--- a/tutors-project/src/components/Tutor/Tutor.module.css
+++ b/tutors-project/src/components/Tutor/Tutor.module.css
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-columns: 200px 1fr 2fr;
+  grid-template-columns: 1fr 1fr 2fr;
   align-items: start;
   padding: 10px;
   gap: 20px;
