--- a/tutors-project/src/components/InfoBlock/InfoBlock.module.css
+++ b/tutors-project/src/components/InfoBlock/InfoBlock.module.css
@@ -2,44 +2,48 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
   width: 370px;
 }
 
 .info button {
-  padding: 0;
-  width: 30px;
-  height: auto;
-  border: none;
-  border-radius: 50%;
   cursor: pointer;
-  background-color: white;
-  transition: background-color 0.2s ease;
+  border: none;
+  background-color: transparent;
+  font-size: 20px;
+  display: flex;
+  padding: 5px;
 }
 
 .info button:hover {
-  background-color: #e0e0e0;
-}
-
-.info svg {
-  margin: 2px;
-  width: 24px;
-  height: 24px;
-  color: #424242;
+  background-color: #eceff1;
 }
 
 .modal {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 12px;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+  background-color: white;
+  position: absolute;
+  z-index: 999;
+  bottom: -85px;
+  right: 16px;
+  gap: 0px !important;
 }
 
-.modal div {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-start;
-  gap: 20px;
-  padding: 12px;
+.modal button {
+  font-size: 18px;
+  padding: 10px 20px;
+  color: #757575;
+}
+
+.modal button:hover,
+.modal svg:hover {
+  color: black;
+}
+
+.modal svg {
+  font-size: 20px;
+  margin-right: 20px;
+  color: #757575;
 }
